# Ultimate-NPC-Dodging

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
include/: PCH.h  UselessFenixUtils.h  Utils.h  dodge.h  hooks.h  settings.h
src/: Utils.cpp  dodge.cpp  hooks.cpp  plugin.cpp
